[IMPLEMENTATION] Functioning etch a sketch

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <h1>Etch-a-sketch</h1>
-    <div class="colors"></div>
     <div class="container"></div>
-    <div class="clear"></div>
+    <div class="options">
+        <button id="clear">Clear</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
